# slack-botmydesk

./: .env.TEMPLATE  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.override.yml.DEV.TEMPLATE  docker-compose.override.yml.PROD.TEMPLATE  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  pr.yml
.run/: Docker_ Black format.run.xml  Docker_ Celery Beat + Worker.run.xml  Docker_ Celery Beat.run.xml  Docker_ Celery Worker.run.xml  Docker_ Dev_ Run tasks.run.xml  Docker_ Flake 8.run.xml  Docker_ Makemessages (Dutch).run.xml  Docker_ Makemigrations.run.xml  Docker_ Migrate.run.xml  Docker_ Poetry update.run.xml  Docker_ run_scheduled_tasks.run.xml
app/: manage.py
src/: pyproject.toml
src/bmd_api_client/: client.py  dto.py  exceptions.py
src/bmd_core/: apps.py  mixins.py  models.py  services.py  tasks.py
src/bmd_core/migrations/: 0001_initial.py  0002_remove_botmydeskuser_slack_locale_and_more.py  0002_user_locale.py  0003_next_profile_update.py  0003_remove_botmydeskuser_next_background_run_and_more.py  0004_alter_botmydeskuser_slack_tz.py  0004_user_preferences.py
src/bmd_hooks/: apps.py  services.py  urls.py  views.py
src/bmd_hooks/management/commands/: dev_run_tasks.py  dev_socket_mode.py  run_scheduled_tasks.py
src/bmd_hooks/services/: callbacks.py  event.py  interactivity.py  slash.py
src/bmd_slashcmd/: apps.py  dto.py  services.py
src/bmd_slashcmd/management/commands/: dev_socket_mode.py
src/botmydesk/: celery.py  settings.py  urls.py  wsgi.py
src/locales/nl/LC_MESSAGES/: django.po
(+5 files in other folders)
